<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Login Screen
    <string name="login_textview">Login</string>
    <string name="email_textview">Email : </string>
    <string name="email_edittext">Enter Your Email </string>
    <string name="password_edittext">Enter Your password </string>
    <string name="password_textview">Password : </string>
    <string name="login_button">Login</string>
    <string name="login_with_existing_button">Login with Existing Account</string>


    //Welcome Screen
    <string name="welcome_textview">Welcome To The</string>
    <string name="shoestore_textview">* Shoe Store *</string>
    <string name="instructions_button">Instructions -> </string>

    //Instructions Screen
    <string name="instruction_headline_textview"># Instructions #</string>
    <string name="instructions_textview">Congratulations! You have now access to your shoe list as well as you can add new shoe to your list
        \n\nEnjoy your Shoe Store App!
    </string>
    <string name="shoeList_button">My Shoe List -> </string>

    //Shoe List Screen
    <string name="floatingButton_description">Add New Shoe Detail</string>
    <string name="logout_menu">Logout</string>

    //Shoe Details Screen
    <string name="shoedetails_textview">Add a new Shoe</string>
    <string name="shoe_name_textview">Name : </string>
    <string name="shoe_company_textview">Company : </string>
    <string name="shoe_size_textview">Size : </string>
    <string name="shoe_description_textview">Description : </string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>

    //Toast texts
    <string name="empty_field_message">This Field can not be emptied!</string>
    <string name="shoe_added_message">Shoe Details has been saved!</string>
    <string name="invalid_email_message">Email is Invalid!</string>
    <string name="invalid_password_message">Password is Invalid!</string>
    <string name="password_correction_message">"Please enter 8 characters long password"</string>



</resources>
